2008-02-20  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #7602: htmlArea RTE: Make the use of extended inline elements configurable
	* Fixed bug #7604: htmlArea RTE: add compatibility mode for indentation and alignment
	* Fixed bug #7582: RTE transformation should process dd element as block element
	* Fixed bug #7609: HTMLArea RTE: labels deleted from file locallang_tooltips.xml
	* Fixed bug #7609 (continued): HTMLArea RTE: labels deleted from files CharacterMap/locallang and InlineCSS/locallang

2008-02-19  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Added feature #7393: ASCII wrapper functions for strtoupper and strtolower (patch by Steffen Kamper)
	* Use t3lib_div::strtoupper() for processing indexed search templates

2008-02-19  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #3491: Linking between domains in the pagetree ignores simulate static documents
	* Fixed bug #7425: syntax error in temp_CACHE*.php (patch by Steffen Kamper)

2008-02-19  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #7583: htmlArea RTE should allow to markup text in absence of any block element
	* Fixed bug #7584: htmlArea RTE: pressing TAB in last cell of table should create new row
	* Fixed bug #7585: Invoking htmlArea RTE block style plugin from other plugin fails in FF3 and IE7
	* Fixed bug #3537: htmlArea RTE: Inconsistent markup when adding tr/td in different ways in Firefox
	* Fixed bug #6767: htmlArea RTE: Merge cells does not work on merged cells
	* Fixed bug #3537 (revisited): htmlArea RTE: Correct execCommand argument in previous patch
	* Updated htmlArea RTE version number to 1.7.1 and updated manual

2008-02-19  Ingo Renner  <ingo@typo3.org>

	* added feature #7580: Enable tabs for be_groups, credits Francois Suter
	* added feature #7566: Tabs for fe_user and fe_groups, credits Steffen Kamper
	* added feature #7565: Tabs for sys_template, credits Steffen Kamper