@@ -50,7 +50,7 @@ class WorkspaceSelector implements backend_toolbarItem {
 	 *
 	 * @param	TYPO3backend	TYPO3 backend object reference
 	 */
-	public function __construct(TYPO3backend &$backendReference) {
+	public function __construct(TYPO3backend &$backendReference = null) {
 		$this->backendReference       = $backendReference;
 
 		$this->changeWorkspace        = t3lib_div::_GP('changeWorkspace');
