@@ -40,7 +40,7 @@ interface backend_toolbarItem {
 	 *
 	 * @param	TYPO3backend	TYPO3 backend object reference
 	 */
-	public function __construct(TYPO3backend &$backendReference);
+	public function __construct(TYPO3backend &$backendReference = null);
 
 	/**
 	 * checks whether the user has access to this toolbar item
